.metadata/.plugins/org.eclipse.cdt.ui/TP2_1.build.log
20:37:37 **** Incremental Build of configuration Debug for project TP2_1 ****
make -j4 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F429ZITx -DSTM32F4 -DNUCLEO_F429ZI -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Inc -I"/home/rome/STM32CubeIDE/workspace_1.12.1/RaulRomero_workspace/TP2_1/Drivers/STM32F4xx_HAL_Driver/Inc" -I"/home/rome/STM32CubeIDE/workspace_1.12.1/RaulRomero_workspace/TP2_1/Drivers/CMSIS/Include" -I"/home/rome/STM32CubeIDE/workspace_1.12.1/RaulRomero_workspace/TP2_1/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/rome/STM32CubeIDE/workspace_1.12.1/RaulRomero_workspace/TP2_1/Drivers/BSP/STM32F4xx_Nucleo_144" -I"/home/rome/STM32CubeIDE/workspace_1.12.1/RaulRomero_workspace/TP2_1/Drivers/Core/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_msp.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F429ZITx -DSTM32F4 -DNUCLEO_F429ZI -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Inc -I"/home/rome/STM32CubeIDE/workspace_1.12.1/RaulRomero_workspace/TP2_1/Drivers/STM32F4xx_HAL_Driver/Inc" -I"/home/rome/STM32CubeIDE/workspace_1.12.1/RaulRomero_workspace/TP2_1/Drivers/CMSIS/Include" -I"/home/rome/STM32CubeIDE/workspace_1.12.1/RaulRomero_workspace/TP2_1/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/rome/STM32CubeIDE/workspace_1.12.1/RaulRomero_workspace/TP2_1/Drivers/BSP/STM32F4xx_Nucleo_144" -I"/home/rome/STM32CubeIDE/workspace_1.12.1/RaulRomero_workspace/TP2_1/Drivers/Core/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_msp.d" -MT"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_msp.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_msp.o"
arm-none-eabi-gcc "../Drivers/Core/Src/stm32f4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F429ZITx -DSTM32F4 -DNUCLEO_F429ZI -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Inc -I"/home/rome/STM32CubeIDE/workspace_1.12.1/RaulRomero_workspace/TP2_1/Drivers/STM32F4xx_HAL_Driver/Inc" -I"/home/rome/STM32CubeIDE/workspace_1.12.1/RaulRomero_workspace/TP2_1/Drivers/CMSIS/Include" -I"/home/rome/STM32CubeIDE/workspace_1.12.1/RaulRomero_workspace/TP2_1/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/rome/STM32CubeIDE/workspace_1.12.1/RaulRomero_workspace/TP2_1/Drivers/BSP/STM32F4xx_Nucleo_144" -I"/home/rome/STM32CubeIDE/workspace_1.12.1/RaulRomero_workspace/TP2_1/Drivers/Core/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/Core/Src/stm32f4xx_it.d" -MT"Drivers/Core/Src/stm32f4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/Core/Src/stm32f4xx_it.o"
../Src/main.c: In function 'main':
../Src/main.c:115:10: warning: implicit declaration of function 'delayRead' [-Wimplicit-function-declaration]
  115 |       if(delayRead(&delayBlinky1))
      |          ^~~~~~~~~
../Src/main.c:115:21: error: 'delayBlinky1' undeclared (first use in this function)
  115 |       if(delayRead(&delayBlinky1))
      |                     ^~~~~~~~~~~~
../Src/main.c:115:21: note: each undeclared identifier is reported only once for each function it appears in
../Src/main.c:118:21: error: 'delayBlinky2' undeclared (first use in this function)
  118 |       if(delayRead(&delayBlinky2))
      |                     ^~~~~~~~~~~~
../Src/main.c:121:21: error: 'delayBlinky3' undeclared (first use in this function)
  121 |       if(delayRead(&delayBlinky3))
      |                     ^~~~~~~~~~~~
make: *** [Src/subdir.mk:19: Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j4 all" terminated with exit code 2. Build might be incomplete.

20:37:40 Build Failed. 5 errors, 1 warnings. (took 3s.378ms)

